busca CEP com VIACEP API

--- a/AppViaCEP/frmBuscaCEP.resx
+++ b/AppViaCEP/frmBuscaCEP.resx
@@ -118,6 +118,152 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnBuscaCEP.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsQAAA7EAZUrDhsAAAr8SURBVGhD7ZgHVFRXHsYJaoxBjUq1IIglIwJiARGMqLAR
+        RVBEutKVXqU3gWFoIqCUAcahDEWEEUSB0BVQLBRhsCX2aDRmxawF7PPtfQOazVkTsznZs8me+c75nfvu
+        K8z3/d+9792HiFBCCSWUUEIJJdSfWNIq0lIKujJLx8uMlyTdMQRRwYG/gD6au0b2i9Vua++4MlP4dsnh
+        fKMw+4e6nut71awXH1Y2nrOPZijnM2+97EaFlVLK5PyPhy/7c0iUpi9rre+39Ul40THEV/aghDeE0vPP
+        UXbhBaovD+LMtTtou1CPfXVhcM804883lM8j1/0pQoxRNFKIMYnY+Sq8+AQiSzrAOnoaJy804ZvH3bjy
+        uIu0p9A5UIXj9wtw/HvCvXw47TV+M1tnhge5/g8dYqNmrZmuomI6L1XVUpWrYvp5jtJmBYbiJjlfmoG8
+        zVw9ufVzdKdryC6RnC2jOl5SapaYtKqZ4sFt8Un8YE4Hwoo6kFR+CjXtlcipj0L1pWyc+KEUJwUcRAfh
+        7BUOrrEicTEzFEaOS4dmqEmsHPnt368pc6ZMpBnKWy+yWnZc09Xr1ZfBXFhk3IRd3newY1+C/f5O2DDr
+        YJ1eBquUbJglJPCN6WEvN4S6DtknF8AvtwNBBR3YRQLUtraAVU8XUO6wDq3p23Hm6C6ca04GrzsP58/m
+        46GvL3qvlqH2Ui40bJWvTZk+bsaIlf9Iogra0kpKJrNTl9gaf6/pnsJf5d8MnaA2rA1tw4bIk7BlD8Cp
+        +CncSp/Cm/sUfpWDCD46iPCvBhHVMIjY5iGEcq9iJ/skQvI7UNXSjtyGBGR9tQvJRQ4oU5uNhJodKLwc
+        gpKvQ8DtCkBDaxhOtSai884h9D5oALslAQs2KVQTP+OGbf0GTVswWVbFfGnLEgevN+ruXCz3boOWbxtW
+        +rVBZ2cdNnhzYOrLxPYwFrzjS+ETXwL32GK47T4C75xOhB4eQFTdEBiNg0hoJqEKe1HRRMzXxyO9JgSx
+        ldsRV7gV5QvlEX3IHnsaXFB4KVgQpOgtVKCrDDTdZsN/vz1/7lrZSGJt1LDDD2jGYnGrlR47+OqeJ6Hm
+        3oplHsewzpWNoNj92M2uAKe5D4f77uFQ/wNwzw+A03MfrI5bSKnpRmjGQfiFMeBDZyKj+hJar75A180H
+        KGlOQ1p1EBgVjqAfskN0hT24C2aCfsAGUWU2SGt1R8H5QEIQOBf+hYtByO8PgEGw1suZy6X1Ryx+UDQy
+        Gc/oBGZCy6kcjGQ2chsvoKT/Rxy79wKnH7xC98Br8uR4TSbfKzSRfUduP0PpjSHkXnmK2FP34cduwM7A
+        MCTnRaHmejoO9MQjhuuI6HJivtwWiambUairiKiDNogstRbAPOWNvF5/5PUFCMjn/UTGKS9oOijdlVCY
+        MHfE469q1KhRIn/T2KJ+t+BAJVJbv0PFrWeo/+4F2u6/xFkS4NzD1+h6X4BvniLj0hPsOf8YHtx+ePqH
+        gVHkTqoYiD31zgLDdDJ8irVpiMkxw64D1ogo2YaI4m2IKrVBzhkf7O/eCTZFj987cs/5gX7EDgtN5rQT
+        fxOHbf66pkRGRt1Ib76OAlLV8ptDqL79XGCWCnHih5doJ20L6dfeeY5DJGDhtUHkfP0U+y4+xu7+R0jg
+        PcL2tGoE+jqgOssc5WV2SE02AstSDYyMLe+MhxdtRRhnK0ILrEDn2iL7tI8giICzvmBRdA7jlrURn6+X
+        Syf+Rg/b/GXNKeAUvo5qug0WMVV4dRBlpMKHv32GamKYMl1DqCJ9KhxlnkWqn36Rqv6weQrP8nMIcrZD
+        h50WOhxWoDLOELuI8fAR4+HkboRxrIh5S4TkWSA41wIJRxzBPOklIKPNG0H5u5DatBPZZIhldXhjc/jK
+        N/LaMtuIx4+Grb5fNNb+/a8SW24gjVQ0++sngvHNIUGKrw+ihEC1VJ/an3X5iaDy1NBJGKk+RWBhE0Kj
+        /JFNqpnf6Iqa+I2oX6eCw7JSOLBEAUwrdcTG6COEGA9mWyBovzkCWWbYXe2EyAP+cEqMxwZ6P/QiOsmj
+        OASZ7Z7Y2+IKbRfVf8gsEl864vW9mrNvX9qzmhO9SOwZQMqFxwKD1PhmErOUYaql+tT+ZGL87bChiO/7
+        EXGVx5GewURwlC/s6iXhXDcffvWrENlsiogiC8TQ9cE0V0Op8kyULpRDZJwBAnJM4Z9lCgMvOoxTLsOK
+        9S3Ms2/BOP06VrvXI6nGA+nH3EGvsMUSi3m88TIi1Kr2vZJNSEh41NXVjfbufhT23EIy76HAZBIZIgLI
+        NtVPfGucaru+x+7a00hl5WNfWhqSGFHw9rCBXe0EwnjYHp2AbRWfwaRIHNr0abDeqyOoeJLbShycPwMB
+        WSYw8AiEhvshaLhVYlNMDXlpNsIgtAq20bFIqXfB3kZCkys8s41AFn0lxOt7F33SwcEhN7q7u9HXxwOP
+        14+znd2oO9WD0g4eck+cR3b7BWQe5yGj4SwyqpqRWVgKJpOJ1NRUUt1ouOipIU5vOnatkoaT1iSYW06A
+        afQkWHAkYF4ogc2ZklgZIA7rFB1B1XPWKcOFYYb5RtlYaJEJyyA7RHAsSdUdsad2B5K/cnpHSh2FM8yj
+        V/Pn6Ez3IX7/bdE3Tl1dPaOqqorP4w0H6Ok5h9Onz6CtrR2NjY2orq4Gl3sIJSUlyM/PB4vFQnZ2NiIi
+        IkD3dAQvRhM39mjjTJg6jrgogW0+G9E6MnBePhmmGydhk5ckVodNhVuaIfwyTcA0XAjfdGN4JBnDK2Uz
+        3JMMoO+jxt8QsOy1OV2b75i8Fl7kKRRSaAp6+VYyRG0ItljjtviplPIUjRHfPxNNU1Ozks1mv+zt7XsX
+        oLW1DQ0NjTh69CgJwEVxcTHy834KkJiYCCcdJRz3X4yLcStwL10H95m6uE6FCSVhnEkYs9mI0Z0KVw1x
+        2K2fDQfX5chZMQ++ezfDZ68RdsTpYYWD0itJxckVoz8R9ROTGpcgMe+zoqmLJBrlV8j0KK6Tv6FmSRvQ
+        cVv0XNNhwbPxU8cZjXj+majH1CxxcfFAPT29TgYj9klxcQm/pqYGtbW1qKo6grKyMnA4HMHQiY+PR0h4
+        INyCyJjfrgU3LSmkGMiizJ6G436LceltmMzhMKdJmCoShjpe466MWP2ZcAnRgXXkGiw2m/do4nSx3dTv
+        E6hn/lgC9QKTIVBvYzXCWoIVwYIgQfhFfUKgEUwkJSUZNBrtoJqa2rEvt6x+sCPIHE5BJnAKM4JrzEZ4
+        7DZ8h3ucPqytVWGvKYHI1dLI2jKLmJ2PVnJn3ob5JvEL3ExZhb+TO3QuSgOb9GZCcYP87bETR1MfM79q
+        akRUkX/zRw91MlWJyQRZMelxnl84qAx5pxjDPdGAQEyP4MRYB8sQbei6qPKVDWfdV1k65a7h558+CtQU
+        5yfrzxgO4zAfh50WoCN4KboiloG7XRFKc8fzyJpzM/n7YoT/uiZL0CYlrfPWeO21xwgupOJ2kbow9FmG
+        ZdvmD8lpTu0SkxgbR87TI2gTjGQ+Ftm3ZtroK15qk17HfzkNaRvlkEsmNzXBTeaNu0vWy+vJeR9cJvyR
+        kpPVkK7cFLCCr+Os+mbBBvk7UoqTuaJjRB3IsQWETwlvX/lUS41jjcljRKKWS4n2OqpMeO6yaOIr7amj
+        L38qKmJPjv32D5c/SJQpVUnaJLaY5FgG2dYhSBM+9PFBGVUeIyJiS8rtTLaXEai59j8RFWIC4fcYoCbg
+        X+afW0IJJZRQQgkl1P+xRET+CVOqOjOHupxJAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnLimpar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7EAAAOxAGVKw4bAAAI90lE
+        QVRoQ+1Ze1BU5xVfHllYFpZ981JCJqM2NlEyRpN20kxjCD5iGiY1TWNnaiZtNXEUJcbSAEap1ESJgMAu
+        C4Sny/vlK4JirCAQtcQoaCigLAusjxEUxWUJr9Nz7t7NIF5wIdjkD34zv9nLd+895/d93/m+75wLbxrT
+        mMY0uGCLdEQKWNI1tf1sYeMptXUPeMFh2ccrhWHq90XazE2uJ07+S3qSmLHR9QS1hbwlDKNnPCS2HvSO
+        +dWfCEJHxr9DwPMOfgkfiNT/jpBcbEyQm25lKcGYr4S7OUq4nW0mXVNbF95rVMtNJ3ZILmnwneULHPzI
+        Bmvr/wrb1xc6zI/9m0tm3V7ZHRLXjUJbkuRw6lMpHAuXwJFPJFASIob9yNJtEijHtv+q5WBIU4CpwA3u
+        5SnhXLTsDtrY97tFDr5k02z6EQKnnn6cNgcIP/x6t7SDRNzcp4SaXVKoj5VBs0YOV1Hg3Vwl9BW6QX+R
+        mXRNbdRJ/RcK6MYZGSxxg6H95o6c3i01BL7utIlssz6mHr99ms+b7WnnHr/GJQVHum8IBZCI6xkK6EhV
+        wEAxCmLb6JqLg0jmmdHt2HY5Ud4Xv1aUSj7I15TC35fPe8LNzgOnOw9HfJhEjHQ+nmhrSTbJNvrIf9Ld
+        zu3lZ6aoE14yO/oR4qJL78RwmQqxY5Fsd2qVoForSiKfXrIfGU6OfGZ3sAtZKQzF2O0fOfKTpxLuZEvB
+        lC/nHAzy0Zqs6MftOJR8sxomh48ChDzct39Vu0d2fSrED6L4usSnoESzHsrUv4drGR5jdoJ8km/SMClI
+        nJnpEyauE5X05j/oZKIkUW0pblB9JBGGAODy5WaoiJqL7UrO58kn+SYNrJaJYc97LrxVLzmubFDJe6di
+        9PsK5HA0/jW4ebMT5QPUVh+BxiTvMTtAPsn3u4sFb4S/48yqmhjstR+6aunQ4XIwEZIYfaonnD1ZyIjv
+        6uyE4+oVzDrget5C8p26QZSKWpidxGrM87HnPTXDfnbVZ9I2Omy4jI9F2uMHixXwfaHsB5ryxPBVvB90
+        dXVB/8AQlOdsg+vpMhjAewNF3IuZSB3HFKVtjpf9bNJkNTTrRLy1SwR/bktRDE0kfEjIbcx3KmIXQfHn
+        y6EwchkU7F4GJdEBcOF0KTP6N27cgKSdq+Fg1FI4ELUcjse+BNcyPcdczKSBtGC+xaqzAgCRvMh3XVQ9
+        eMyPNjoWzeLlcEzzNuhbddBzzwR3e3oZ3jP2wfDwMNMB+jX24r17vdBjNIGutQ1Ko15kZoLLLmkgLQA7
+        WHXWwTHnI9fjlMdwGeVif5ECKhP8oK2tlRE6Hqgr5u4A6Fsa4ELi05yL2ZJykBbSZJb2ENiazw3lwTDx
+        RWvDh0a/J0cGyVv9QBP9CSTFhIEmKgTUnweDavcWiPtsM8R+GgQxERshescGyIgOhNQ96yErPggOxP8J
+        bmWZbdxnE8mk4pgEHkItpInVNj7kIluei8DGG9NhvTULmAmdbAUu0legRBsNuRkqyM1UQf4+Mwu0KihE
+        FmWpoDhbDWmqcMgP9YbCuL/Al1GLoTtLwml3GH3jYUYpNxzdLtE7O9p4k7aHwkNqy5O52HpjTq+nURgv
+        jOj+3Rzc3/FUbW/Xs0ExPhrqTkP29kWg1zVBbWEgng+4E42yy9jGgbmaroBrSKwl9FLUZFWqzbdn5snz
+        8FZxExUoTQlyZjfgcjKA22W16gVobrzEyns4aitLIC18KbTq2+FMyhIcBO7FSz6vJMqhDesH1NKImjxY
+        bVZBeDBUXIlbGFyMk3F2gEboWjoWM6UaVpp1OJyfAJmRq0Gn00F13Hy0ba4lRpPC9z8YQrpkOZAW0mSW
+        Zh1ssLjIoPr2u3juEaLDqjLueehob2OlWYfSoiQ4kBwEVw3tUJ88dgeIJyIkTBhhep1BmszSrMCZSClv
+        wwqnwHacgTKsZ2knGGmYYr87Swbl2n/AIGVmEwDlQAUJQdDRYYBTcQvG7AD5LNsuAdJAWrDsZNVZAb/5
+        fN5v5vKf+zZG1vlNlIwxMjKM6Lo9zRPO1xxmZVmPK83fQUTYeui61Q212pV4gD24iBn76JN2oHNRss4X
+        5/IXkCarIRIwsyXAxXPEgPUuFvD37dN06DSn/RIM+iZW1sPR0qIDo9EIJpMJ0tPS8HTuhcr9UZgTPZgL
+        0d/kk2rtvC2uh1CLI27tpMl6YO95gSuc1uEiGvpqhwRuYPFucUTTXq1aCAaDgZU3Pvr7+2HvrlBo17cw
+        f1MnCFeuNENZrD/m/veHEWWhtAOi78HgN4XvHQgVs6omgFkedjyRk4178cfiM7pkBWBmysQ+M0K4gEt2
+        LoTsbO0POc54oJHP3fMOtDScZVvMKDuUD+pdgVCveZKZVbJN5w7GO3RhbUy+SQNpmRTOx8h4a5YI3mrW
+        yI3UAfowZV4LStAG+0DM3/3gbEUxnP/6ywf4La6Pb6oOMqw6ng+Hdi2CYxkboamuEprrKqCmPAvK45dg
+        UTMDbudgNkoDg7Zp57uwl/nGZCTfuAZZNZOAt5zpuWDvX12+sJwJPbg7kKM7OUrmC0JbqgezoEeT2i3U
+        p7gzeU2n1g0MGTOQM6EjTcmEDg2IZWYtpI9lMeiTfM80a5g8fv2Lx+ib0MzCYPEpmtaKnVLmaxp1gkgC
+        rKHl+ZEcKZpIbVQLZ212rXxcYTeTfE8Jtr4t5C2ex392f4j4HI3694UPOv+xZMTj4iUfr8zj+4b+YZJf
+        I8aCBisif1/+s7lbXGsoHGhUuYRMhmSLYh/z/ppX0QdVhI8Ea/wF9H3UR/2+KE+XJO8j51yhYC0t7+J2
+        2Uf/P5iFtnHhst4eERbOeoy+GTmvXSpYjUnWJTwfhkkEJV+jFyMX6RlLnXEd3yUbHyxzWo0pvLPvExMo
+        3KcCc7zsfcJXOW8qCBZX1cfKjBQGtI+PXLwjSfco/OrjZEbcFKq2/9E5aI6XnQ9r7qcBVks8rJbEyxc4
+        +KOgnZmbXI+WbpM01cXK9A0qOUO6pja6989VzhGvPefgL8R39gW5slZ+XnAUC208X36G/zh2yptI19RG
+        98yPTGMa05gGAx7vfzoVltaXG8kWAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnSair.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsQAAA7EAZUrDhsAAAnLSURBVGhDvZl5UFNZFocfWiqCqN20jUoQUcImRCDBuIAG
+        BSGKy+DQdgsoAhJCElYBFReaqE27samACIIgSwI89gBhiSAEFBDs1imnprunx6nqqqn5b/6c6j5zXxZZ
+        8gIRHnOqviJVQM7vuzn3vvcAo6IkR1bY1p1Yk90UaiVtDduiwaYeIWsN2yyT8R1lz9N9ZD2X9spkQhdZ
+        c7iNrOHUBllzqJWsLdJeJuM5ktJ+zqEPvZei/sSagtrAFVs07agtyVEz+5Ywm3/3p/lBT9Ie6Ipnq4lT
+        03flIPz4NAXeS6/D+ONYmCiOh4mSBPXXJ4nwpjQZXhfFwtCdU/A8/RD0XPCGrsTdIBexoFPgBl2xO6AP
+        vXdTiNVvksMrLTVtqava42YP5KiJ9JiZirLDq6HAf81HWpHUe4kYFBl+iIPQ++1B6En31XAQFOJDMHDn
+        a3j5IBLGHolgDMkQjBYK4dV9HnSn+UB9sCV0ClkgOboqTdOWuqo/uRGXnjCHmiNm8CSEAe3VJdDX2w3y
+        jjZoacRBUZAErx8JdMJ3X/NR0XX1gAr5lf3QeZnAGzrSJlHcDIQu9Mk0nrWF2sAv8jVtqauqI2Z4VYAZ
+        VBxZC/3tjTA6OgqDg4PQ29sLMpkMFIUpMFbI1xtefoUsPAfaL3FAdnGfirYL+6BJ6ApVh82oF6g4ZIo/
+        O7QKakIdYWJigkQgWSUw//B7VTTFe0D5IVPqBcr9TfFyrinURbJIBXqRwGiBWmCu8ERwsvCtqV7QFOcB
+        T/1NqBco9TPBy/xMQRrBJBcoIASiNcHnF74lxQsaYz2g9OAiCJT4mOBPfE2hJly/wEh+9CeHb02dDN+S
+        4gkNsSwo8V0EgeIDJnixjwlUh7mTCvQUnNcIqINrw6vn3bDwzcmegKPrQtEBY+oFHnkb40X7TaDyjB6B
+        /PPwKp83ZdU/PXzT+T1QL2RCofciCBRyjPFCzkqoOK1PIAlePeRNG5mZ4YljcrbwBHUCJuRzKBI4VfvW
+        GsPAiHj9cK8xnr93JZSHuJEKdH8U0IbXt1knwxPBp4ZvTNoNtTHugHpRIyAe/tdEcu8/n53Bf1l738sY
+        f+C1EsqC9Qg8TEK3CVFzhPeaNbxW4L4nRQJnG/76Q2rPB0gf+O0n8akDb/P2GEPpqdkFpo7MzPDqkSEP
+        34Bu7BoSd4GU7wa5e5bPLXD08QuzoPIJ+9k4XfuX999U/wgRDe8h48UHuHwhCYqDPUgFuh4kwvB9tYD+
+        8Org2vCN6AZwang8YRdIot0ga5cBAhcV/2i42v8BZiOs7i0EPRtX8VXlOFzs/RUy6vqg96U+gXMfw7ck
+        sKEleQ9J+OkjMzU8nrATaniucJdtgMCfK0aVfyobgU/lXMM7yOj7O5T1TBeQI4GhPLWAlOcGeZ7GkO+/
+        Tk943ZWvj9+pojrKFe7sMEAg4PGg8kixEuZDYNlLuNT7M2S2vwZZl0bgfgISiFSNTGGgLSRvNYJUu2Xo
+        U5gcmekrv0snfB16MKqK2g63WMvmFuAWPldyH/XBQuA3/QBXOt/BY7xDJaBEAsQxWSvYARecTCDLz0pv
+        eO3ITA1PUHmOAZnuBgj4PuhW+j7sgYVyonQAossV0EkI5BIC6plXj8ynhN8BteiJrzKSATdcDRDwzu1Q
+        ImAh7EckVcihsVUGnXmEQMQnhlevOhGcQCrygGcRLiDevnRuAa97LUqve60wX7h5Mihqef5xE3fmxcNg
+        TgRp+Jknjb7wBBXhLpDhYoDArlsNyl23GmE+RJR0QvfAy2mnUEcuIRD+MTzZSTNXeAl6oC8Pd4b0bQYI
+        eHxXW8X6rva/s4F+5g8EaNkprgRRfCKMk1zICIGB7PAZI6MbXj3v5OFrBCx4etYZrjoZIGArylnhfKPR
+        YjZ2Zkp/chNXA8G+xFt/xO3eCvcOu5Beidtz41QCZOHVq04eXiKcDF+D7kTLwrbBZQcDBAwpprjyF5er
+        Fb8zrlVkpzqbtqfZL4W7h5zJBXLi4EWWWoAIPp/w1TFMKD2zDS7aGVEj4JhWWuWU9sSfeH2BvgS/SF8K
+        t/1nEzirMzLaedeGl4r0h6/iu0PpaSdIpVMkMLVSthjhqbZL4Hs/cgFZTqxKYHr46Wf85LxPhieCa8MT
+        PEECKVsXQeC8jRGevGUJZB7UI5AdC/33wnRWfurIzBVeJRDqBKgX9QJJm41wBNz02UYq0KYRmD28dmTI
+        wxOUIIHEzRj1AvGbMDzB2giuH9Av0Hc3TDMys4VXB69GT14zw2sF4jYtgkCsFYbHWWGQ4e1ELpAlQgJn
+        DAyvu/JaioMdQURbBAGRJYYj4LzDahgZGtQRaL0ngOd3zsx75bXkBFiDcAN2X9OWuhJaYncRQJBzOgCG
+        Bl5ME8BvhEHXjSAUWh2e7JicK3xpmDMk2S6HmPUYT9OWuor8HKMJNmK/aiWSHNbCVS8HuOxpB2m76fDw
+        K+ePK6/vjJ9KBXryKg5xgoeB6OrubwU3PNdBvM1SQD36E2jYSk1baitiNfa5YAMWH7MRy5pJ2vZV2VIR
+        62dVeAHrd4mA+Z+aGObfamLc5VV8ZtHTcMb1vGM24uue68QpDivEAktMjN5rKun8jdjJKAxbpmn3/6+n
+        IQxTSQzTUxLtYi9JoC3OKi6kgjBsadQGbBPaZA4EvC8wupbLjsvp1UKWj1TICqwWMo9XCdwDqvlMbwmP
+        uaM6muFcEuZIz/axpF92NaPHWqp/h/8ltkVogdloibbAvtS0or5Q+OVoc+0Vrse4BHHWy7kprpYa1nNz
+        j9txUfhpVAld1UTrUnrakVt4cgs3K8Cam7l/Pfdb1mdctLe4/A0YE7VT/TmT0iJWS2CBcQhun9jH6e+V
+        c5RKJQedQhx0CnFw8RmOXHyMIxUwp1Glhbd9ToqC7Tlx1ks5Meuw9Zq21BU6HexiLDF2HH0le0TZxx4Z
+        GWEjAXZPTw+7o6OD3ZIVw+67HcKWxjHZ0hhdKqcSpZ8sX0s2zwLbrGlLXaHxsUazy7jmacd48+YNA13I
+        GEiA0dXVxWhra2O0ZfMZfbdOM6SxbpPw1VTqxVmHoq/tGDwaRv0/utG90AZi82XsdaSPjY2pQAJ0hUJB
+        b25upjdnx9IV34fRa2PZGlx14U3yTA8l3zjSF2UzoxEyR7cStMx9tjR0L6RiaGiIhvYADX0CtLYcEa03
+        M5hWJ9phGJEutHISHgXb0vibsM80bamrZHPM7AKSuHnAwfzdu3cqhoeHzeVyuZo8gflwXqh5vcDDQBym
+        UaYl1ME8yQIz1bSlrkS22ArijW/7WpiOj4+rQJt3ktshKoiL2cKwML2GjmxN2wXX1PN4CXEhI5BIJLoE
+        BWlA318gqNeM6wCG/Q8mxpRLM3gsQwAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAgIAAAAEAIAAoCAEAFgAAACgAAACAAAAAAAEAAAEAIAAAAAAAAAgBAAAAAAAAAAAAAAAAAAAA
